--- a/index.html
+++ b/index.html
@@ -37,41 +37,35 @@
   <body>
     <main>
       <!-- Sign-up form start -->
-      <div>
+      <div class="container">
         <section class="information">
-          <div class="img">
+          <!-- <div class="img"> -->
             <img
               src="/assets/images/illustration-sign-up-desktop.svg"
-              alt="image"
+              alt="image" class="image_desktop"
             />
-          </div>
+          <!-- </div> -->
           <article class="info_product">
             <h1>Stay updated!</h1>
+
+
 
             <p class="top_para">
               Join 60,000+ product managers receiving monthly updates on:
             </p>
-            <p class="product_disc">
-              <img
-                src="/assets/images/icon-list.svg"
-                alt="icon-list"
-                class="src"
-              />
+            <p class="product_disc list">
+              <img src="/assets/images/icon-list.svg" alt="icon-list" class="img_tick_list"/>
               Product discovery and building what matters
             </p>
-            <p class="measure">
+            <p class="measure list" >
               <img
                 src="/assets/images/icon-list.svg"
-                alt="icon-list"
-                class="src"
+                alt="icon-list" class="img_tick_list"
               />Measuring to ensure updates are a success
             </p>
-            <p class="much_more">
-              <img
-                src="/assets/images/icon-list.svg"
-                alt="icon-list"
-                class="src"
-              />And much more!
+            <p class="much_more list">
+              <img src="/assets/images/icon-list.svg" alt="icon-list" class="img_tick_list"/>
+              And much more!
             </p>
             <div class="content_field">
               <strong>Email address</strong>
@@ -90,24 +84,23 @@
         <!-- Success message start -->
         <section class="success" id="success_message">
           <div id="success-content">
-            <img src="/assets/images/icon-success.svg" alt="success" />
+            <img src="/assets/images/icon-success.svg" alt="success" class="icon-success"/>
             <h2>Thanks for subscribing!</h2>
             <p>
               A confirmation email has been sent to
               <strong> ash@loremcompany.com.</strong> Please open it and click
               the button inside to confirm your subscription.
             </p>
-            <button type="button">Dismiss message</button>
+            <button type="button" href="index.html">Dismiss message</button>
           </div>
         </section>
         <!-- Success message end -->
-
-        <div class="attribution">
-          Challenge by
-          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-            >Frontend Mentor</a
-          >. Coded by <a href="#">OLAOLUWA</a>.
-        </div>
+      </div>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">OLAOLUWA</a>.
       </div>
     </main>
   </body>
